css using external styling

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS basic</title>
+    <style>
+        h2{
+            color: red;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 style="color: rgb(134, 15, 15);">Hello World!</h1>
+    <h2>CSS using internla style tag</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem ducimus rem harum voluptates molestias accusamus. Iste doloremque fugit aliquid quaerat aliquam minus assumenda perspiciatis? Eos accusamus nulla maiores quaerat?</p>
 </body>
 </html>
