--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h1 style="color: rgb(134, 15, 15);">Hello World!</h1>
     <h2>CSS using internla style tag</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem ducimus rem harum voluptates molestias accusamus. Iste doloremque fugit aliquid quaerat aliquam minus assumenda perspiciatis? Eos accusamus nulla maiores quaerat?</p>
+    <button>Submit</button>
 </body>
 </html>
