--- a/PracticeSet1/index.html
+++ b/PracticeSet1/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <div id="box">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, doloribus. Repellendus suscipit provident nisi obcaecati dolores! Molestiae commodi dicta doloremque vero. Incidunt assumenda architecto vero. Recusandae laudantium assumenda quasi pariatur.</div>
+    <h1>heading 1</h1>
+    <h2>heading 2</h2>
+    <h3>heading 3</h3>
 </body>
 </html>
