css added to a button element

--- a/PracticeSet1/index.html
+++ b/PracticeSet1/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        button {
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
     <div id="box">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, doloribus. Repellendus suscipit provident nisi obcaecati dolores! Molestiae commodi dicta doloremque vero. Incidunt assumenda architecto vero. Recusandae laudantium assumenda quasi pariatur.</div>
     <h1 class="heading">heading 1</h1>
     <h2 class="heading">heading 2</h2>
     <h3 class="heading">heading 3</h3>
+    <button style="background-color: pink;">Submit</button>
 </body>
 </html>
