paragraph text is center aligned

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 <body>
     <h1 style="color: rgb(134, 15, 15);">Hello World!</h1>
     <h2>CSS using internla style tag</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem ducimus rem harum voluptates molestias accusamus. Iste doloremque fugit aliquid quaerat aliquam minus assumenda perspiciatis? Eos accusamus nulla maiores quaerat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem ducimus rem harum voluptates molestias accusamus. Iste doloremque fugit aliquid quaerat aliquam minus assumenda perspiciatis? Eos accusamus nulla maiores quaerat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit illo sunt harum iste velit praesentium quidem eaque enim! Enim, alias. Quas quae officia, repellendus ratione saepe iure voluptatum hic.
+    Neque enim quaerat sit, repellat voluptatibus eaque blanditiis aliquam commodi tempora numquam, molestias, saepe sed. Modi eius minus ullam! Commodi blanditiis cupiditate eligendi aperiam facere veniam in deserunt eaque cum.
+    Deleniti molestias perspiciatis explicabo eius id minima vel voluptatibus maiores nostrum dolorem reiciendis atque, consequuntur, vitae assumenda provident veritatis magnam, odit nam ex. Sit similique, incidunt quam eveniet ab iusto.
+    Placeat, asperiores eos enim qui quis, porro quisquam autem dolorem praesentium quas quod cumque? Atque, quis laudantium iure quasi deserunt at delectus, veniam aspernatur unde ipsum reprehenderit numquam amet earum!
+    Laborum, hic nemo? Voluptatum aliquid iusto in laudantium repudiandae reiciendis porro non! Ab, id! Vel molestias rerum totam quasi blanditiis aut laborum, ut quam sit est similique id omnis dolore?
+    Molestiae, molestias? Nihil culpa possimus quos id a, cumque harum vero quas voluptatum deserunt eaque totam nobis illum. Numquam tempora nisi voluptates. Cum facilis dolorum impedit autem nobis rem a?
+    Fugit, vitae. Iusto commodi cumque perspiciatis voluptates consequatur aspernatur, voluptatibus nulla saepe excepturi optio magni, quae accusamus dignissimos ipsa sit dolorum labore illo assumenda, nisi nobis sapiente esse? Labore, amet!
+    Praesentium aliquid corrupti beatae at sint earum eos in esse aspernatur, vel incidunt tenetur id libero fugiat. Hic voluptatum in, obcaecati perspiciatis aut officiis voluptates voluptate enim eligendi ratione molestias.
+    Dolores nobis amet quidem nulla nemo. Iure reprehenderit culpa ipsum perspiciatis iste, repellendus fugit, sequi doloribus, sunt quae possimus consectetur cumque maxime? Alias necessitatibus dignissimos magnam, quo nisi consequuntur dolores?
+    Mollitia commodi maiores similique quibusdam consequuntur expedita quas non, quos aliquam rem fugit sed! Consequatur explicabo, recusandae quos asperiores mollitia ducimus praesentium commodi, harum quo sunt, voluptates facere? Praesentium, aliquam?</p>
     <button>Submit</button>
 </body>
 </html>
