--- a/PracticeSet3/index.html
+++ b/PracticeSet3/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        This is a div!
-    </div>   
+    <div id="navbar">
+        <a id="logo">amazon.in</a>
+        <a href="#">Account</a>
+        <a href="#">My Cart</a>
+        <a href="#">Contact Us</a>
+            <input placeholder="search Amazon.in">
+            <button>Search</button>
+    </div>
 </body>
 </html>
