--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 <body>
     <div>this is a div</div>
     <button>click me!</button>
+    <h1>Display</h1>
+    <div style="background-color: blue;">box1</div>
+    <div style="background-color: green;">box2</div>
+    <div style="background-color: green;">box3</div>
 </body>
 </html>
